* FileUtil: Try to handle lack of unpack200 support more gracefully     * Update: Select old update URL if no unpack200 available
Monotone-Parent: 4331ecd5feffd127ad5c11ff0d01091f083b3406
Monotone-Revision: a772480154b9307f4e481551c0f69696158f108f

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-16T13:29:41
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2010-06-16 zzz
+    * Console: Sort countries with selected locale
+    * FileUtil: Try to handle lack of unpack200 support more gracefully
+    * Update: Select old update URL if no unpack200 available
+
 2010-06-13 zzz
     * Console: Add some divs for languages to news and readmes
     * HTTP Proxy: Pass different User Agent to outproxy
