- Move connection profile and delay connect to advanced config section      - Add persistent client key support to SOCKS IRC
Monotone-Parent: 384cb8e49cd9ca7501960b8c2b8b020b7bc5af89
Monotone-Revision: b3c52fedd4fa958e6dec14ad71813715d2d065ba

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-26T04:11:02
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,12 @@
+2010-06-26 zzz
+    * I2PTunnel:
+     - Move connection profile and delay connect to advanced config section
+     - Add persistent client key support to SOCKS IRC
+     - Fix display of interactive setting
+    * jbigi, jcpuid: Suppress log messages when not in router context
+    * jetty.xml: Add info on how to configure for following symlinks
+    * logs.jsp: Add more JVM version info so we can distinguish OpenJDK from Sun
+
 2010-06-16 zzz
     * Console: Sort countries with selected locale
     * FileUtil: Try to handle lack of unpack200 support more gracefully
