CapacityCalculator cleanup and comments - no changes to formula
Monotone-Parent: ed090b00f90d3519f716bfde3a3f0876b66b27f9
Monotone-Revision: a00c805ece0b00786cd4e1d2b09e76e635411266

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-29T13:40:26
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,11 @@
+2010-06-29 zzz
+    * CapacityCalculator: Cleanup
+    * I2PTunnel: Add default HTTPS outproxy
+    * Jetty: Disable TRACE and OPTIONS in console and eepsite
+    * RouterInfo: Add main() to dump RI files
+    * Scale prng.buffers based on max memory, reduce default from 16 to 9
+    * SOCKS: Better HTTP error message
+
 2010-06-26 zzz
     * I2PTunnel:
      - Move connection profile and delay connect to advanced config section
