25%-50% cpu savings in BOB. The remainder of the fix is in streaming lib, which aparently keeps running and does not sleep according to profiling.
Monotone-Parent: a00c805ece0b00786cd4e1d2b09e76e635411266
Monotone-Revision: 08b1e0356e38567d4632bdc0269506b5d89f7a7c

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-06-29T19:06:39
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2010-06-29 sponge
+    * 25%-50% cpu savings in BOB. The remainder of the fix is in streaming
+      lib, which aparently keeps running and does not sleep according to
+      profiling.
+
 2010-06-29 zzz
     * CapacityCalculator: Cleanup
     * I2PTunnel: Add default HTTPS outproxy
