* I2PTunnel: Don't start a tunnel if no valid destinations;       cleanups, logging, and error propagation fixes
Monotone-Parent: 35a00366f2a33d730a66610339e949fc1baaa752
Monotone-Revision: 0c558993b375ef23c3388cd045e07f0c3366e902

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-06-30T23:37:25
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-07-01 zzz
+    * EventDispatcher: Minor cleanups and comments
+    * I2PTunnel: Don't start a tunnel if no valid destinations;
+      cleanups, logging, and error propagation fixes
+    * Transport: Fix NTCP address generation when host is specified but port is auto
+
 2010-06-29 sponge
     * 25%-50% cpu savings in BOB. The remainder of the fix is in streaming
       lib, which aparently keeps running and does not sleep according to
