* I2PTunnel: More error propagation fixes
Monotone-Parent: 7cde660ca3a99d0159e8e7ea58aaaaffdc426170
Monotone-Revision: e3f750c88ad1340c0fe1f85bfa14db2fc862f52e

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-07-03T13:59:46
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,8 @@
+2010-07-03 zzz
+    * Build: Fix poupdate dependencies
+    * I2PTunnel: More error propagation fixes
+    * I2PTunnelHTTPClient: Don't use BufferedReader
+
 2010-07-01 zzz
     * EventDispatcher: Minor cleanups and comments
     * I2PTunnel: Don't start a tunnel if no valid destinations;
