RouterConsole: Dutch translation (thanks to monkeybrains)
Monotone-Parent: e3f750c88ad1340c0fe1f85bfa14db2fc862f52e
Monotone-Revision: b496f11b4c0bf0f1e1ee177ba04ccf9462b6d0c6

Monotone-Author: duck@mail.i2p
Monotone-Date: 2010-07-04T13:13:45
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-07-04 duck
+    * RouterConsole: Dutch translation (thanks to monkeybrains)
+
 2010-07-03 zzz
     * Build: Fix poupdate dependencies
     * I2PTunnel: More error propagation fixes
