RouterConsole: Fix typos in Dutch translation
Monotone-Parent: b496f11b4c0bf0f1e1ee177ba04ccf9462b6d0c6
Monotone-Revision: 262118628cae881e7f960b2d25aaf8803ec1d7af

Monotone-Author: duck@mail.i2p
Monotone-Date: 2010-07-04T23:03:02
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/locale/messages_nl.po
+++ b/apps/routerconsole/locale/messages_nl.po
@@ -3196,7 +3196,7 @@ msgstr "Uptime"
 
 #: ../java/src/net/i2p/router/web/SummaryBarRenderer.java:186
 msgid "Help with configuring your firewall and router for optimal I2P performance"
-msgstr "Hulp bye het configureren van je firewall en router voor optimale I2P prestatie"
+msgstr "Hulp bij het configureren van je firewall en router voor optimale I2P prestatie"
 
 #: ../java/src/net/i2p/router/web/SummaryBarRenderer.java:213
 msgid "Download"
@@ -4967,7 +4967,7 @@ msgstr "samenvatting netwerk database"
 
 #: ../jsp/WEB-INF/classes/net/i2p/router/web/jsp/netdb_jsp.java:227
 msgid "I2P Network Database Summary"
-msgstr "Samenvatting I2P Netwoek Database "
+msgstr "Samenvatting I2P Netwerk Database "
 
 #: ../jsp/WEB-INF/classes/net/i2p/router/web/jsp/nowebapp_jsp.java:109
 msgid "WebApp Not Found"
