I2PTunnel & I2PSnark: Dutch translation (thanks to monkeybrains)
Monotone-Parent: 262118628cae881e7f960b2d25aaf8803ec1d7af
Monotone-Revision: 119119f4903d4cecba984f879b6db5203016f651

Monotone-Author: duck@mail.i2p
Monotone-Date: 2010-07-05T13:37:36
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-07-05 duck
+    * I2PTunnel & I2PSnark: Dutch translation (thanks to monkeybrains)
+
 2010-07-04 duck
     * RouterConsole: Dutch translation (thanks to monkeybrains)
 
