--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,7 @@
+2010-07-05 zzz
+    * i2psnark: Fix transition to end game
+    * I2PTunnelIRCClient: Filter PART messages like we do for QUIT
+
 2010-07-05 duck
     * I2PTunnel & I2PSnark: Dutch translation (thanks to monkeybrains)
 
