susidns: Dutch translation (thanks do monkeybrains)
Monotone-Parent: 81ba198b58f328377824c82951ddac6e4bdb5537
Monotone-Revision: 1aaece9ff5f88a32d06c8a298afcaf02a3a993cb

Monotone-Author: duck@mail.i2p
Monotone-Date: 2010-07-05T23:07:19
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-07-06 duck
+    * susidns: Dutch translation (thanks to monkeybrains)
+
 2010-07-05 zzz
     * i2psnark: Fix transition to end game
     * I2PTunnelIRCClient: Filter PART messages like we do for QUIT
