RouterConsole: Add Help & FAQ link, minor label improvements.
Monotone-Parent: 75924ed88a6c32cde4d01c62e4c0132ccc2220f7
Monotone-Revision: 7c16ec22712c9ace8d4b9628780e67ce0350236c

Monotone-Author: duck@mail.i2p
Monotone-Date: 2010-07-07T19:04:30
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,12 +1,9 @@
-2010-07-06 duck
-    * susidns: Dutch translation (thanks to monkeybrains)
+2010-07-07 duck
+    * RouterConsole: Add Help & FAQ link, minor label improvements.
 
 2010-07-05 zzz
     * i2psnark: Fix transition to end game
     * I2PTunnelIRCClient: Filter PART messages like we do for QUIT
-
-2010-07-05 duck
-    * I2PTunnel & I2PSnark: Dutch translation (thanks to monkeybrains)
 
 2010-07-04 duck
     * RouterConsole: Dutch translation (thanks to monkeybrains)
