More i2ptunnel error propagation fixes - key file - thx echelon
Monotone-Parent: 8a9b22372d7b0e59474630c36adbbd56707de396
Monotone-Revision: 6471243b39d38669b029124571adc47ad6417db4

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-07-08T18:45:30
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-07-08 zzz
+    * I2PTunnel: More error propagation fixes
+
 2010-07-07 duck
     * RouterConsole: Add Help & FAQ link, minor label improvements.
 
