I2PSnark: Add favicon to file browser page; version bump to 0.8-02.
Monotone-Parent: a079ebfc0dbf4f85481ba069f59b49e2822fe6fb
Monotone-Revision: 77c7149b4b8dcfac91bef7f393c4a9019d0e0b5f

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-09-23T04:56:43
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,5 +1,5 @@
 2010-09-15 dr|z3d
-    * I2PSnark: Overhaul UI, implement gray theme.
+    * I2PSnark: Overhaul UI, implement new theme.
 
 * 2010-07-12  0.8 released
 
