added plurals to fr, de and nl po file
Monotone-Parent: fde9e2ec95fc68e829b4568f3a0984c474019cfa
Monotone-Revision: 692630b99a047e40995628f21537a388b3426aef

Monotone-Author: echelon@mail.i2p
Monotone-Date: 2010-10-18T08:28:15
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/locale/messages_fr.po
+++ b/apps/routerconsole/locale/messages_fr.po
@@ -15,8 +15,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: German\n"
-"X-Poedit-Basepath: /home/lee/work/i2p/monotone/i2p.i2p/apps/routerconsole/java\n"
+"X-Poedit-Language: French\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: ../jsp/WEB-INF/classes/net/i2p/router/web/jsp/config_jsp.java:106
 msgid "config networking"
