Sanity and some fixs for slackware package
Monotone-Parent: 8f07569d36dfe9b8d3de21decc04e6fb89b3f9a8
Monotone-Revision: 6cf2d1b2af6daa4fffc59fede3407d3e10c09095

Monotone-Author: sponge@mail.i2p
Monotone-Date: 2010-10-22T02:43:17
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 2010-10-22 sponge
+    * Sanity and some fixs for slackware package
+
+2010-10-22 sponge
     * Fix rc.i2p for slackware package
 
 2010-10-10 sponge
